@startuml
hide empty members


package ska_oso_pdm.entities {
        package sdp {
        package sdp_configuration <<Rectangle>> {
            class SDPConfiguration {
                eb_id : str
                max_length: str
                }
            }

        package processing_block <<Rectangle>> {
            class ProcessingBlock {
                pb_id : ProcessingBlockID
                parameters : Dict
            }
            class PbDependency {
               pb_id : ProcessingBlockID
               kind: List[str]
            }

            class Workflow {
                name : str
                kind: str
                version: str
            }

            class ProcessingBlockID {
            }

        package scan_type <<Rectangle>> {
           class ScanTypeID

           class ScanType {
               scan_type_id : ScanTypeID
               channels: List[Channel]
           }

                class Channel {
                    count : int
                    start: int
                    stride: int
                    freq_min : float
                    freq_max: float
                    link_map: List[Tuple]
                }
            }



            SDPConfiguration *- "0..* " ScanType
            SDPConfiguration *- "0..* " ProcessingBlock
            ProcessingBlock *- "0..1" Workflow
            ProcessingBlock *-- "0..* " PbDependency
            ProcessingBlock "1" <-- PbDependency
            ScanType *- "1..* " Channel
            ScanType -> Target

            processing_block --[hidden]-> scan_type
            processing_block --[hidden]-> scan_type
        }
    }
@enduml
